fixed collapsed navbar

--- a/mysite/mysite/static/mysite/base.css
+++ b/mysite/mysite/static/mysite/base.css
@@ -1,4 +1,3 @@
-@media (min-width: 768px) {
 .navbar {
     display: flex;
     flex-direction: column;
@@ -55,7 +54,7 @@
     border: none;
     border-radius: 15px;
     cursor: pointer;
-    transition: background-color 0.3s ease;}
+    transition: background-color 0.3s ease;
 }
 .menu button:active {
     background-color: #555;
